@@ -8,6 +8,8 @@ Damien Radtke, Eric Le Lay and Bernhard Walle for contributing to this release.
 {{{ Bug fixes
 
 - Fix # 2921611 - PluginSets fail to load grand-dependencies. (Damien Radtke)
+  Removed unnecessary popup warnings from InstallPanel about deselecting plugins
+  when loading a pluginset. (Alan Ezust)
 
 - Fix # 2920287 - Macro recording for home/end actions fixed. (Alan Ezust)
 
